--- a/releases/8/sabayon-artwork-core/Makefile
+++ b/releases/8/sabayon-artwork-core/Makefile
@@ -6,10 +6,12 @@ TARBALL_NAME := $(DIR_NAME)-$(VERSION).tar.xz
 PKG_CATEGORY := x11-themes
 PKG_PUSH_DIR = $(PUSH_DIR)/$(PKG_CATEGORY)/$(DIR_NAME)
 
-all: cook
+all: scripts cook
+
+scripts:
+	./make_fbsplash.sh
 
 cook:
-	./make_fbsplash.sh
 	tar -cJf $(TARBALL_NAME) \
 		../$(DIR_NAME) --exclude Makefile \
 		--exclude $(TARBALL_NAME)
